# ImageViewer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FEATURES.md  README.md  vcpkg-configuration.json  vcpkg-toolchain-wrapper.cmake  vcpkg.json
.github/workflows/: build.yml  debug.yml  release_build.yml
src/: AppState.h  CMakeLists.txt  DebugOverlay.cpp  DebugOverlay.hpp  DebugPanel.cpp  DebugPanel.h  EventHandler.cpp  EventHandler.h  ImageHandler.cpp  ImageHandler.h  ImageHandler.hpp  Renderer.cpp  Renderer.hpp  Settings.hpp  Window.cpp  Window.hpp  main.cpp
src/metadata/: version.rc.in
